--- a/cms/templates/coltrane/entry_detail.html
+++ b/cms/templates/coltrane/entry_detail.html
@@ -3,6 +3,24 @@
 {% block content %}
 <h2>{{ object.title }}</h2>
 {{ object.body_html|safe }}
+
+<h2>Comments</h2>
+{% load comments %}
+{% get_comment_count for object as comment_count %}
+<p>So far, this entry has {{ comment_count }}
+comment{{ comment_count|pluralize }}.</p>
+
+{% load markup %}
+{% get_comment_list for object as comment_list %}
+{% for comment in comment_list %}
+<p>On {{ comment.submit_date|date:"F j, Y" }},
+{{ comment.name }} said:</p>
+{{ comment.comment|markdown:"safe" }}
+{% endfor %}
+<h2>Post a comment</h2>
+{% render_comment_form for object %}
+
+
 {% endblock %}
 {% block whatis %}
 <p>This is an entry posted to my blog on
